# internship-challenge

./: .gitignore  README.md
backend/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
backend/backend/settings/: base.py
backend/core/: serializers.py  tests.py  urls.py  views.py
backend/core/services/: lcm_service.py
dockerfiles/: .dockerignore  docker-compose.yml
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  App.styles.js
frontend/src/components/: Calculator.js  Footer.js  Header.js  Logo.js
swagger/: swagger.yaml
